--- a/turbo.json
+++ b/turbo.json
@@ -13,5 +13,10 @@
       "cache": false,
       "persistent": true
     }
-  }
+  },
+  "globalEnv": [
+    "JWT_SECRET",
+    "NEXTAUTH_SECRET",
+    "NEXTAUTH_URL"
+  ]
 }
